# mod_whisper_asr

./: LICENSE  README.md
sources/: CMakeLists.txt  Makefile.am  mod_whisper_asr.c  mod_whisper_asr.h  utils.c  whisper_api.cpp  whisper_api.h
sources/conf/: dialplan.xml  whisper_asr.conf.xml
sources/conf/autoload_configs/: whisper_asr.conf.xml
sources/conf/dialplan/: dialplan.xml
sources/whisper/: version.txt  whisper.cpp  whisper.h
